# EGM

./: .gitignore  loader.py  main.py  pyproject.toml
architectures/: __init__.py  construct.py  conti_drift.py  discrete_diffusion.py  emb.py  multi_modal.py
configs/: main.yaml
configs/algo/: befm_conti.yaml  befm_disc.yaml  befm_multimodal.yaml  disc_fm.yaml  iefm_conti.yaml  iefm_disc.yaml  iefm_multimodal.yaml
configs/energy/: dw_cluster.yaml  gmm25.yaml  ising.yaml  lj13.yaml  lj_cluster.yaml  multimog.yaml  rbm.yaml  rbm_six_modes.yaml
configs/flow_model/: cnn_flow.yaml  conti_egnn_flow.yaml  conti_mlp_flow.yaml  fl_flow.yaml  fl_flow_res.yaml  flow_model.yaml  multimodal_flow.yaml  sym_flow.yaml  trans_flow.yaml
configs/model/: cnn.yaml  conti_mlp.yaml  disc_mlp.yaml  disc_vel_mlp.yaml  egnn.yaml  multimodal.yaml  transformer.yaml
configs/optim/: adam.yaml  adamw.yaml
energy/: __init__.py  base.py  gmm.py  ising.py  lj_energy.py  metric.py  multi_mog.py  multimodal_dw.py  multimodal_lj.py  rbm.py  viz.py
energy/rbm_params/: rbm_nv2_nh3_seed42_sigma1.0_wcoeff0.01.pt  rbm_nv2_nh3_sigma1_six_modes.pt  rbm_nv2_nh3_sigma1_six_modes_samples_10000.pt  rbm_nv2_nh3_sigma1_six_modes_samples_100000.pt
prob_path/: __init__.py  cond_ot_path.py  joint_prob_path.py  joint_ve_mask.py  masked_mixture_path.py  ve_path.py
train/: __init__.py  befm_conti.py  befm_disc.py  befm_multimodal.py  disc_fm.py  iefm_conti.py  iefm_disc.py  iefm_multimodal.py
utils/: __init__.py  buffer.py  etc.py  eval_step.py  integrate.py  logger.py  loss_fn.py  optim.py  schedule.py
